--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,10 +1,3 @@
-<h1>Editing event</h1>
+<h1><%= t "views.events.editing" %></h1>
 
-<%= render "form", event: @event %>
-
-<br>
-
-<div>
-  <%= link_to "Show this event", @event %> |
-  <%= link_to "Back to events", events_path %>
-</div>
+<%= render "form" %>
