--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,10 +3,10 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="border-top font-weight-bold col-sm-12">
+  <div class="border-top font-weight-bold col-6 col-sm-12">
     <div class="field">
-      <p><%= f.label :email, class:"my-3 col-sm-2" %></p>
-      <p><%= f.email_field :email, class:"mx-2 col-sm-6 col-form-label", autofocus: true, autocomplete: "email" %></p>
+      <p><%= f.label :email, class:"my-3 col-md-6 col-sm-12" %></p>
+      <p><%= f.email_field :email, class:"mx-2 col-md-6 col-sm-12 col-form-label", autofocus: true, autocomplete: "email" %></p>
     </div>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -14,35 +14,35 @@
     <% end %>
 
     <div class="field d-flex justify-content-start">
-      <div><%= f.label :password, class:"my-3 col-sm-2" %>
+      <div><%= f.label :password, class:"my-3 col-md-6 col-sm-12" %>
         <i class="my-3 font-weight-normal"><%= t("views.form.leave_blank") %></i>
       </div>
     </div>
 
     <div>
-      <%= f.password_field :password, class:"mx-2 col-sm-6 col-form-label", autocomplete: "new-password" %>
+      <%= f.password_field :password, class:"mx-2 col-md-6 col-sm-12 col-form-label", autocomplete: "new-password" %>
     </div>
     
     <% if @minimum_password_length %>
-      <em class="px-3 my-3 font-weight-normal"><%= @minimum_password_length %> <%= t("characters_minimum") %></em>
+      <em class="px-3 my-3 font-weight-normal col-md-6 col-sm-12"><%= @minimum_password_length %> <%= t("characters_minimum") %></em>
     <% end %>
 
     <div class="field">
-      <div><%= f.label :password_confirmation, class:"my-3 col-sm-6" %></div>
+      <div><%= f.label :password_confirmation, class:"my-3 col-md-6 col-sm-12" %></div>
       <div>
-        <%= f.password_field :password_confirmation, class:"mx-2 col-sm-6 col-form-label", 
+        <%= f.password_field :password_confirmation, class:"mx-2 col-md-6 col-sm-12 col-form-label", 
         autocomplete: "new-password" %>
       </div>
     </div>
 
     <div class="field ">
-      <div class="d-flex align-items-center col-sm-12">
-        <%= f.label :current_password, class:"my-3 col-md-10" %>
-        <i class="font-weight-normal"><%= t("views.form.need_password") %></i>
+      <div class="d-flex align-items-center col-md-6 col-sm-12">
+        <%= f.label :current_password, class:"my-3" %>
+        <i class="my-3 font-weight-normal"><%= t("views.form.need_password") %></i>
       </div>
 
       <div>
-        <%= f.password_field :current_password, class:"mx-2 col-sm-6 col-form-label", autocomplete: "current-password" %>
+        <%= f.password_field :current_password, class:"mx-2 col-md-6 col-sm-12 col-form-label", autocomplete: "current-password" %>
       </div>
     </div>
 
