--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,7 +14,8 @@
 
     <div class="actions font-weight-normal my-3">
       <%= f.submit I18n.t("views.form.save"), class: "mx-2 btn btn-warning" %>
-      <%= t "views.form.or" %> <%= button_to I18n.t("views.form.back"), :back, class:"mx-2 btn btn-primary" %>
+      <%= t "views.form.or" %>
+      <%= button_to I18n.t("views.form.back"), :back, class:"mx-2 btn btn-primary" %>
     </div>
   </div>
 <% end %>
