--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,9 @@
-<h1><%= t 'views.users.new_user' %></h1>
+<h1><%= t "views.users.new_user" %></h1>
 
 <%= render "form", user: @user %>
 
 <br>
 
 <div>
-  <%= link_to I18n.t('views.form.back'), users_path %>
+  <%= link_to I18n.t("views.form.back"), users_path %>
 </div>
