--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,7 +3,7 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="border-top font-weight-bold col-6 col-sm-12">
+  <div class="border-top font-weight-bold">
     <div class="field">
       <p><%= f.label :email, class:"my-3 col-md-6 col-sm-12" %></p>
       <p><%= f.email_field :email, class:"mx-2 col-md-6 col-sm-12 col-form-label", autofocus: true, autocomplete: "email" %></p>
@@ -24,7 +24,7 @@
     </div>
     
     <% if @minimum_password_length %>
-      <em class="px-3 my-3 font-weight-normal col-md-6 col-sm-12"><%= @minimum_password_length %> <%= t("characters_minimum") %></em>
+      <em class="px-3 my-3 font-weight-normal "><%= @minimum_password_length %> <%= t("characters_minimum") %></em>
     <% end %>
 
     <div class="field">
@@ -56,9 +56,11 @@
 
 <h3><%= t("delete_acc") %></h3>
 
-<p class="mx-4 px-4 buffer-bottom"><%= t("unhappy") %> 
+<p class="mx-4 px-4 buffer-bottom">
+  <%= t("unhappy") %>
   <%= button_to I18n.t("cancel_acc"),
   registration_path(resource_name),
   form: { data: { turbo_confirm: t("are_you_sure") } },
   class:"btn btn-lg btn-danger",
-  method: :delete %></p>
+  method: :delete %>
+</p>
