--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,9 +30,9 @@
       <%= yield %>
     </div>
 
-  <div class="container">
+  <div class="container py-3">
     <footer class="text-right small fixed-bottom py-2 my-2 px-2 bg-light text-gray opacity-50">
-      <div class="mx-4 text-right"><%= t 'app.company' %> &copy; 2022</div>
+      <div class="mx-4 text-right"><%= t "app.company" %> &copy; 2022</div>
     </footer>
   </div>
   </body>
