--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -1,21 +1,21 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <%= link_to t('app.name'), root_path, class: 'navbar-brand' %>
+  <%= link_to t("app.name"), root_path, class: "mx-2 navbar-brand" %>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item active mx-2">
-          <%= link_to I18n.t('views.navi.view_profile'), current_user %>
+          <%= link_to I18n.t("views.navi.view_profile"), current_user %>
         </li>
         <li class="nav-item active mx-2">
-          <%= link_to I18n.t('views.navi.sign_out'), destroy_user_session_path, data: { turbo_method: :delete } %>
+          <%= link_to I18n.t("views.navi.sign_out"), destroy_user_session_path, data: { turbo_method: :delete } %>
         </li>
       <% else %>
         <li class="nav-item active mx-2">
-          <%= link_to I18n.t('views.navi.sign_in'), new_user_session_path %>
+          <%= link_to I18n.t("views.navi.sign_in"), new_user_session_path %>
         </li>
         <li class="nav-item active mx-2">
-          <%= link_to I18n.t('views.navi.sign_up'), new_user_registration_path %>
+          <%= link_to I18n.t("views.navi.sign_up"), new_user_registration_path %>
         </li>
       <% end %>
     </ul>
