--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,11 @@
-<h1><%= t 'views.users.editing' %></h1>
+<h1><%= t "views.users.editing" %></h1>
 
 <div class="row">
   <div class="col-md-6 buffer-top">
-    <%= render 'form' %>
+    <%= render "form" %>
 
     <p class="buffer-top">
-      <%= link_to I18n.t('views.users.edit_password'), edit_user_registration_path, class:"color:#FF0000;" %>
+      <%= link_to I18n.t("views.users.edit_password"), edit_user_registration_path %>
     </p>
   </div>
 </div>
