--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,8 +10,8 @@
 <% if @user == current_user %>
   <div class="text-center">
     <p class="btn btn-default buffer-top">
-    <%= link_to I18n.t('views.users.edit_profile'), edit_user_path(@user),
-      class: 'bg-warning btn btn-default' %>
+    <%= link_to I18n.t("views.users.edit_profile"), edit_user_path(@user),
+      class: "bg-warning btn btn-default" %>
     </p>
   </div>
 <% end %>
@@ -19,12 +19,12 @@
 <div class="row">
   <div class="col-md-12">
     <% if @user.events.any? %>
-      <h3 class=""><%= t 'views.users.user_events' %></h3>
+      <h3 class=""><%= t "views.users.user_events" %></h3>
       <div class="row">
-        <%= render partial: 'events/event', collection: @user.events %>
+        <%= render partial: "events/event", collection: @user.events %>
       </div>
     <% else %>
-      <p class="buffer-top"><%= t 'views.users.no_events' %></p>
+      <p class="buffer-top"><%= t "views.users.no_events" %></p>
       <p class="buffer-top"><%= link_to I18n.t("views.events.start"), new_event_path %></p>
 
     <% end%>
