navigation button fixed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,10 +30,10 @@
       <%= yield %>
     </div>
 
-  <div class="container py-3">
-    <footer class="text-right small fixed-bottom py-2 my-2 px-2 bg-light text-gray opacity-50">
-      <div class="mx-4 text-right"><%= t "app.company" %> &copy; 2022</div>
-    </footer>
-  </div>
+    <div class="container py-3 opacity-50 text-center small">
+      <footer class="fixed-bottom py-2 my-2 px-2 bg-light text-gray">
+        <div class="mx-4"><%= t "app.company" %> &copy; 2022</div>
+      </footer>
+    </div>
   </body>
 </html>
