--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -1,20 +1,23 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-xl navbar-light bg-light">
   <%= link_to t("app.name"), root_path, class: "mx-2 navbar-brand" %>
-
+    <button class="navbar-toggler mx-2" type="button" data-bs-toggle="collapse" 
+    data-bs-target="#navbarSupportedContent">
+      <span class="navbar-toggler-icon"></span>
+    </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto my-2">
       <% if user_signed_in? %>
-        <li class="nav-item active mx-2">
+        <li class="nav-item active mx-2 my-2">
           <%= link_to I18n.t("views.navi.view_profile"), current_user %>
         </li>
-        <li class="nav-item active mx-2">
+        <li class="nav-item active mx-2 my-2">
           <%= link_to I18n.t("views.navi.sign_out"), destroy_user_session_path, data: { turbo_method: :delete } %>
         </li>
       <% else %>
-        <li class="nav-item active mx-2">
+        <li class="nav-item active mx-2 my-2">
           <%= link_to I18n.t("views.navi.sign_in"), new_user_session_path %>
         </li>
-        <li class="nav-item active mx-2">
+        <li class="nav-item active mx-2 my-2">
           <%= link_to I18n.t("views.navi.sign_up"), new_user_registration_path %>
         </li>
       <% end %>
