--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -49,7 +49,7 @@
     <div class="actions mx-2 my-3">
       <%= f.submit t("update"), class:"btn btn-warning" %>
       <%= t "views.form.or" %>
-      <%= button_to I18n.t("views.form.back"), :back, class:"btn btn-primary" %>
+      <%= link_to I18n.t("views.form.back"), :back, class:"btn btn-primary" %>
     </div>
   </div>
 <% end %>
