--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,29 +1,29 @@
 <%= form_for @event, data: {turbo: false} do |f| %>
   <%= render partial: "partials/form_errors", locals: {model: @event} %>
 
-  <div class="form-group">
+  <div class="form-group my-2">
     <%= f.label :title %>
     <%= f.text_field :title, class: "form-control" %>
   </div>
 
-  <div class="form-group">
+  <div class="form-group my-2">
     <%= f.label :address %>
     <%= f.text_field :address, class: "form-control" %>
   </div>
 
-  <div class="form-group">
+  <div class="form-group my-2">
     <%= f.label :datetime %>
     <p><%= f.datetime_select :datetime, class: "form-control" %></p>
   </div>
 
-  <div class="form-group">
+  <div class="form-group my-2">
     <%= f.label :description %>
     <%= f.text_area :description, class: "form-control" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit t "views.form.save", class: "btn btn-primary" %>
+  <div class="actions my-2">
+    <%= f.submit I18n.t("views.form.save"), class: "mr-2 btn btn-warning" %>
     <%= t "views.form.or" %>
-    <%= link_to I18n.t("views.form.back"), "/" %>
+    <%= link_to I18n.t("views.form.back"), "/", class:"mx-2 btn btn-primary" %>
   </div>
 <% end %>
