--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,13 +3,14 @@
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
+  <div class="form-group field">
+    <%= f.label :email, class:"my-2" %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit t("send_instructions") %>
+  <div class="actions my-3">
+    <p><%= I18n.t("send_instructions") %></p>
+    <p><%= f.submit t("send"), class:"btn btn-warning" %></p>
   </div>
 <% end %>
 
