forms for comments and subscription added

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -39,8 +39,9 @@
   <div class="row">
     <div class="col-md-8">
       <div class="events-comment buffer-top">
+        <%= render partial: "comments/form", locals: {comment: @new_comment || @event.comments.build } %>
         <div class="buffer-both">
-          <%= render partial: "comments/comment", collection: @event.comments %>
+          <%= render partial: "comments/comment", collection: @event.comments.except(@new_comment) %>
         </div>
       </div>
     </div>
@@ -57,7 +58,7 @@
 
         <div class="">
           <p>
-            <%= render partial: "subscriptions/subscription", collection: @event.subscriptions %>
+            <%= render partial: "subscriptions/subscription", collection: @event.subscriptions.except(@new_subscription) %>
           </p>
         </div>
 
@@ -65,6 +66,9 @@
 
       <div class="event-subscriptions-form">
         <h4>Я пойду!</h4>
+        <div>
+          <%= render partial: "subscriptions/form", locals: {subscription: @new_subscription || @event.subscriptions.build } %>
+        </div>
       </div>
 
     </div>
