--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -46,31 +46,27 @@
       </div>
     </div>
 
-    <div class="col-md-4">
-
+    <div class="buffer-both py-4 px-4 col-md-4">
       <div class="event-owner">
-        <h4>Зовёт</h4>
+        <h4><%= t("event_host") %></h4>
         <p><%= render partial: "users/user", object: @event.user %></p>
       </div>
-
       <div class="event-subscriptions">
-        <h4>Пойдут:</h4>
-
+        <h4><%= t("event_guests") %></h4>
         <div class="">
           <p>
             <%= render partial: "subscriptions/subscription", collection: @event.subscriptions.except(@new_subscription) %>
           </p>
         </div>
-
       </div>
-
-      <div class="event-subscriptions-form">
-        <h4>Я пойду!</h4>
-        <div>
-          <%= render partial: "subscriptions/form", locals: {subscription: @new_subscription || @event.subscriptions.build } %>
+      <% unless @event.user == current_user %>
+        <div class="event-subscriptions-form">
+          <h4>Я пойду!</h4>
+          <div>
+            <%= render partial: "subscriptions/form", locals: {subscription: @new_subscription || @event.subscriptions.build } %>
+          </div>
         </div>
-      </div>
-
+      <% end %>
     </div>
   </div>
 </div>
