--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,22 +1,27 @@
-<div class="buffer-bottom">
-  <p><%= comment.body %></p>
-  <p>
-    <span>
+<div class="buffer-bottom border-bottom border-2">
+  <div class="mt-3 px-2">
+    <%= comment.body %>
+  </div>
+
+  <div class="subscription d-flex align-items-baseline pt-1 justify-content-between">
+    <p>
       <% if comment.user.present? %>
         <%= render partial: "users/user", object: comment.user %>
       <% else %>
         <em><strong><% comment.user_name %></strong></em>
       <% end %>
-    <em><%= l comment.created_at, format: :short %></em>
-    <% if current_user_can_edit?(comment) %>
-      <%= button_to "❌", 
-        event_comment_path(comment.event, comment), 
-        method: :delete, 
-        form: { data: { turbo_confirm: t('are_you_sure') } }, 
-        class: 'btn btn-sm btn-outline-danger buffer-bottom' 
-      %>
-    <% end %>
-        </span>
-
-  </p>
+      <em><%= l comment.created_at, format: :short %></em>
+    </p>
+    <p>
+      <% if current_user_can_edit?(comment) %>
+        <%= button_to "❌", 
+          event_comment_path(comment.event, comment), 
+          method: :delete, 
+          form: { data: { turbo_confirm: t('are_you_sure') } }, 
+          class: "btn btn-sm btn-outline mx-2",
+          title: I18n.t("controllers.comments.delete_comment")
+        %>
+      <% end %>
+    </p>
+  </div>
 </div>
