--- a/app/views/subscriptions/_form.html.erb
+++ b/app/views/subscriptions/_form.html.erb
@@ -14,6 +14,6 @@
   <% end %>
 
   <div class="actions">
-    <%= f.submit "ПодписатьсяЁба", class:"btn btn-success buffer-both" %>
+    <%= f.submit I18n.t("controllers.subscriptions.subscribe"), class:"btn btn-success buffer-both" %>
   </div>
 <% end %>
